Added health check endpoint to api
